<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/share_your_details"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:typeface="normal"
                android:visibility="visible" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName|textAutoComplete"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMidName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/middle_name"
                android:inputType="textPersonName"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spGender"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:orientation="horizontal"
                    android:prompt="@string/gender"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:ems="10"
                android:focusable="false"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDOA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:focusable="false"
                android:hint="@string/date_of_appointment"
                android:inputType="date"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spBloodGrp"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:prompt="@string/bloodgrp"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/tvBloodGrp"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bloodgrp"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spProf"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:prompt="@string/profession"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/tvProf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profession"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <EditText
                android:id="@+id/etPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autoLink="phone"
                android:ems="10"
                android:hint="@string/phone_no"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autoLink="web|email"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/address_line_1"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddress2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/address_line_2"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etcity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/city"
                android:inputType=""
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etState"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/state"
                android:inputType=""
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPincode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pin_code"
                android:inputType="number"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFMember"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:text="@string/family_member_1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName|textAutoComplete"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etRelation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/relation"
                android:inputType=""
                android:textStyle="bold" />

            <EditText
                android:id="@+id/birthday2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:ems="10"
                android:focusable="false"
                android:hint="@string/string_date_of_birth"
                android:inputType="date"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/add_new_family_member"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="#FCFBFB"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>